--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, inicial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="media.css">
         <title>Pedro Lyra</title>
         <style type="text/css" id="operaUserStyle"></style>
     </head>
@@ -89,7 +90,7 @@
                 <div class="project_divide">
                     <h3>SigmaTicket</h3>
                     <p> Project carried out during the second period of the Software Engineering course. Basically, it is a simulation, a system for generating, validating, using and managing a single urban ticket</p>
-                    <img src="./images/SigmaTicket.png" >
+                    <img src="./images/sigmaticket5.png" >
                     <a href="https://github.com/pedrolyraa/SigmaTicket">Read More</a>
                 </div>
             </div>
