--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                     <img src="./images/sigmaticket5.png" >
                     <a href="https://github.com/pedrolyraa/SigmaTicket">Read More</a>
                 </div>
+                <div class="project_divide">
+                    <h3>uTeeth</h3>
+                    <p> Project carried out during the third period of the Software Engineering course. There were two applications developed in Kotlin and Flutter, using Firebase and JavaScript. Basically, the applications serve as an emergency system for dental problems. The one developed in Kotlin is for the patient and the one developed in Flutter for the rescuer/dentist.</p>
+                    <img src="./images/uteeth.jpeg" >
+                    <a href="https://github.com/iamguigasousa/uTeeth3PI">Read More</a>
+                </div>
             </div>
         </div>
        <footer class="center" id="footer">Pedro Lyra © 2022</footer>
